src/objects/Contact_Us_SubType_Option__c.object
<CustomObject>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_ID__c</fullName>
        <externalId>true</externalId>
        <label>Load_ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Only_for_CS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only for CS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_Key__c</fullName>
        <label>Type Key</label>
        <referenceTo>Contact_Us_Type_Option__c</referenceTo>
        <relationshipLabel>ContactUs SubType Options</relationshipLabel>
        <relationshipName>Contact_Us_SubType_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <label>View</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ContactUs SubType Option</label>
    <nameField>
        <label>SubType Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ContactUs SubType Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>